--- a/bibliografie.bib
+++ b/bibliografie.bib
@@ -253,3 +253,63 @@
     date = {December 2018},
     note = {\url{https://otexts.org/fpp2/stationarity.html}, Accessed January 2019},
 }
+
+
+
+@article{adftest,
+    author = { David A.   Dickey  and  Wayne A.   Fuller },
+    title = {Distribution of the Estimators for Autoregressive Time Series with a Unit Root},
+    journal = {Journal of the American Statistical Association},
+    volume = {74},
+    number = {366a},
+    pages = {427-431},
+    year  = {1979},
+    publisher = {Taylor & Francis},
+    doi = {10.1080/01621459.1979.10482531},
+    
+    URL = { 
+    https://doi.org/10.1080/01621459.1979.10482531
+    
+    },
+    eprint = { 
+    https://doi.org/10.1080/01621459.1979.10482531
+    
+    }
+    
+}
+
+@article{unitroottestselliott,
+    author = {Elliott, Graham and Stock, James and J. Rothenberg, Thomas},
+    year = {1996},
+    month = {02},
+    pages = {813-36},
+    title = {Efficient Tests for an Autoregressive Unit Root},
+    volume = {64},
+    journal = {Econometrica},
+    doi = {10.2307/2171846}
+}
+
+@article{unitroottestsPhillips,
+    author = {Phillips, Peter and Perron, Pierre},
+    year = {1986},
+    month = {01},
+    pages = {},
+    title = {Testing for a Unit Root in Time Series Regression},
+    volume = {75},
+    journal = {Cowles Foundation, Yale University, Cowles Foundation Discussion Papers},
+    doi = {10.1093/biomet/75.2.335}
+}
+
+@Misc{churvichunitroot,
+    author = {Clifford M. Hurvich},
+    title = {Differencing and unit root tests},
+    date = {April 2004},
+    note = {\url{http://pages.stern.nyu.edu/~churvich/Forecasting/Handouts/UnitRoot.pdf}, Accessed January 2019},
+}
+
+@Misc{nielsenunitroot,
+    author = {Heino Bohn Nielsen},
+    title = {Non-Stationary Time Series and Unit Root Tests},
+    date = {2005},
+    note = {\url{http://web.econ.ku.dk/metrics/Econometrics2_05_II/Slides/08_unitroottests_2pp.pdf}, Accessed January 2019},
+}
